--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bge"
+    android:background="@drawable/bt"
     tools:context=".MainActivity">
 
     <LinearLayout
@@ -16,7 +16,7 @@
             android:id="@+id/et_first_number"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/colorWhite"
+            android:background="#265b5b"
             android:hint="Enter Number"
             android:minHeight="48dp"
             android:padding="@dimen/edittext_padding" />
@@ -26,7 +26,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/default_margin"
-            android:background="@color/colorWhite"
+            android:background="#265b5b"
             android:hint="Enter Number"
             android:minHeight="48dp"
             android:padding="@dimen/edittext_padding" />
@@ -97,7 +97,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:background="@color/colorWhite"
+            android:background="#265b5b"
             android:padding="@dimen/edittext_padding"
             android:text="No Results"
             android:textSize="20sp" />
